revert refactor change SSCS-11395